--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UIElements2">
-        <activity android:name=".AlbumDetails"></activity>
+        <activity android:name=".AddSongActivity"></activity>
+        <activity android:name=".AlbumDetails" />
         <activity android:name=".AlbumActivity" />
         <activity android:name=".QueueActivity" />
         <activity android:name=".MainActivity">
